update for gh pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_v6",
-"homepage": "http://julcresus.github.io/julcresus.github.io",
+"homepage": "http://julcresus.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
