--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ga": "^3.3.0",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-router-scroll-top": "^0.2.1",
     "react-scripts": "^3.4.3",
     "react-text-loop": "^2.3.0"
