--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^5.0.0-alpha.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.1.3",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.13.1",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^1.6.7",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
