--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.7",
@@ -17,7 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-router-scroll-top": "^0.2.1",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.1",
     "react-text-loop": "^2.3.0"
   },
   "scripts": {
